parser.out
shift/reduce conflict in state 347 resolved as shift.


Unused terminals:

   TYPEDEF_CHAR
   RANGE
   UNSIGNED_CHAR
   ERRORCODE
   TYPEDEF_INT
   ERRORCODE2
   UNSIGNED_INT

Grammar

Rule 1     primary_expr -> identifier
Rule 2     primary_expr -> CONSTANT
Rule 3     primary_expr -> STRING_LITERAL
Rule 4     primary_expr -> ( expr )
Rule 5     postfix_expr -> primary_expr
Rule 6     postfix_expr -> postfix_expr [ expr ]
Rule 7     postfix_expr -> postfix_expr ( )
Rule 8     postfix_expr -> postfix_expr ( argument_expr_list )
Rule 9     postfix_expr -> postfix_expr . identifier
Rule 10    postfix_expr -> postfix_expr PTR_OP identifier
Rule 11    postfix_expr -> postfix_expr INC_OP
Rule 12    postfix_expr -> postfix_expr DEC_OP
Rule 13    argument_expr_list -> assignment_expr
Rule 14    argument_expr_list -> argument_expr_list , assignment_expr
Rule 15    unary_expr -> postfix_expr
Rule 16    unary_expr -> INC_OP unary_expr
Rule 17    unary_expr -> DEC_OP unary_expr
Rule 18    unary_expr -> unary_operator cast_expr
Rule 19    unary_expr -> SIZEOF unary_expr
Rule 20    unary_expr -> SIZEOF ( type_name )
Rule 21    unary_operator -> &
Rule 22    unary_operator -> *
Rule 23    unary_operator -> +
Rule 24    unary_operator -> -
Rule 25    unary_operator -> ~
Rule 26    unary_operator -> !
Rule 27    cast_expr -> unary_expr
Rule 28    cast_expr -> ( type_name ) cast_expr
Rule 29    multiplicative_expr -> cast_expr
Rule 30    multiplicative_expr -> multiplicative_expr * cast_expr
Rule 31    multiplicative_expr -> multiplicative_expr / cast_expr
Rule 32    multiplicative_expr -> multiplicative_expr % cast_expr
Rule 33    additive_expr -> multiplicative_expr
Rule 34    additive_expr -> additive_expr + multiplicative_expr
Rule 35    additive_expr -> additive_expr - multiplicative_expr
Rule 36    shift_expr -> additive_expr
Rule 37    shift_expr -> shift_expr LEFT_OP additive_expr
Rule 38    shift_expr -> shift_expr RIGHT_OP additive_expr
Rule 39    relational_expr -> shift_expr
Rule 40    relational_expr -> relational_expr < shift_expr
Rule 41    relational_expr -> relational_expr > shift_expr
Rule 42    relational_expr -> relational_expr LE_OP shift_expr
Rule 43    relational_expr -> relational_expr GE_OP shift_expr
Rule 44    equality_expr -> relational_expr
Rule 45    equality_expr -> equality_expr EQ_OP relational_expr
Rule 46    equality_expr -> equality_expr NE_OP relational_expr
Rule 47    and_expr -> equality_expr
Rule 48    and_expr -> and_expr & equality_expr
Rule 49    exclusive_or_expr -> and_expr
Rule 50    exclusive_or_expr -> exclusive_or_expr ^ and_expr
Rule 51    inclusive_or_expr -> exclusive_or_expr
Rule 52    inclusive_or_expr -> inclusive_or_expr | exclusive_or_expr
Rule 53    logical_and_expr -> inclusive_or_expr
Rule 54    logical_and_expr -> logical_and_expr AND_OP inclusive_or_expr
Rule 55    logical_or_expr -> logical_and_expr
Rule 56    logical_or_expr -> logical_or_expr OR_OP logical_and_expr
Rule 57    conditional_expr -> logical_or_expr
Rule 58    conditional_expr -> logical_or_expr ? logical_or_expr : conditional_expr
Rule 59    assignment_expr -> conditional_expr
Rule 60    assignment_expr -> unary_expr assignment_operator assignment_expr
Rule 61    assignment_operator -> =
Rule 62    assignment_operator -> MUL_ASSIGN
Rule 63    assignment_operator -> DIV_ASSIGN
Rule 64    assignment_operator -> MOD_ASSIGN
Rule 65    assignment_operator -> ADD_ASSIGN
Rule 66    assignment_operator -> SUB_ASSIGN
Rule 67    assignment_operator -> LEFT_ASSIGN
Rule 68    assignment_operator -> RIGHT_ASSIGN
Rule 69    assignment_operator -> AND_ASSIGN
Rule 70    assignment_operator -> XOR_ASSIGN
Rule 71    assignment_operator -> OR_ASSIGN
Rule 72    expr -> assignment_expr
Rule 73    expr -> expr , assignment_expr
Rule 74    constant_expr -> conditional_expr
Rule 75    declaration -> declaration_specifiers ;
Rule 76    declaration -> declaration_specifiers init_declarator_list ;
Rule 77    declaration_specifiers -> storage_class_specifier
Rule 78    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 79    declaration_specifiers -> type_specifier
Rule 80    declaration_specifiers -> type_specifier declaration_specifiers
Rule 81    init_declarator_list -> init_declarator
Rule 82    init_declarator_list -> init_declarator_list , init_declarator
Rule 83    init_declarator -> declarator
Rule 84    init_declarator -> declarator = initializer
Rule 85    storage_class_specifier -> TYPEDEF
Rule 86    storage_class_specifier -> EXTERN
Rule 87    storage_class_specifier -> STATIC
Rule 88    storage_class_specifier -> AUTO
Rule 89    storage_class_specifier -> REGISTER
Rule 90    type_specifier -> CHAR
Rule 91    type_specifier -> SHORT
Rule 92    type_specifier -> INT
Rule 93    type_specifier -> LONG
Rule 94    type_specifier -> SIGNED
Rule 95    type_specifier -> UNSIGNED
Rule 96    type_specifier -> FLOAT
Rule 97    type_specifier -> DOUBLE
Rule 98    type_specifier -> CONST
Rule 99    type_specifier -> VOLATILE
Rule 100   type_specifier -> VOID
Rule 101   type_specifier -> struct_or_union_specifier
Rule 102   type_specifier -> enum_specifier
Rule 103   type_specifier -> TYPE_NAME
Rule 104   struct_or_union_specifier -> struct_or_union identifier { struct_declaration_list }
Rule 105   struct_or_union_specifier -> struct_or_union { struct_declaration_list }
Rule 106   struct_or_union_specifier -> struct_or_union identifier
Rule 107   struct_or_union -> STRUCT
Rule 108   struct_or_union -> UNION
Rule 109   struct_declaration_list -> struct_declaration
Rule 110   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 111   struct_declaration -> type_specifier_list struct_declarator_list ;
Rule 112   struct_declarator_list -> struct_declarator
Rule 113   struct_declarator_list -> struct_declarator_list , struct_declarator
Rule 114   struct_declarator -> declarator
Rule 115   struct_declarator -> : constant_expr
Rule 116   struct_declarator -> declarator : constant_expr
Rule 117   enum_specifier -> ENUM { enumerator_list }
Rule 118   enum_specifier -> ENUM identifier { enumerator_list }
Rule 119   enum_specifier -> ENUM identifier
Rule 120   enumerator_list -> enumerator
Rule 121   enumerator_list -> enumerator_list , enumerator
Rule 122   enumerator -> identifier
Rule 123   enumerator -> identifier = constant_expr
Rule 124   declarator -> declarator2
Rule 125   declarator -> pointer declarator2
Rule 126   declarator2 -> identifier
Rule 127   declarator2 -> ( declarator )
Rule 128   declarator2 -> declarator2 [ ]
Rule 129   declarator2 -> declarator2 [ constant_expr ]
Rule 130   declarator2 -> declarator2 ( )
Rule 131   declarator2 -> declarator2 ( parameter_type_list )
Rule 132   declarator2 -> declarator2 ( parameter_identifier_list )
Rule 133   pointer -> *
Rule 134   pointer -> * type_specifier_list
Rule 135   pointer -> * pointer
Rule 136   pointer -> * type_specifier_list pointer
Rule 137   type_specifier_list -> type_specifier
Rule 138   type_specifier_list -> type_specifier_list type_specifier
Rule 139   parameter_identifier_list -> identifier_list
Rule 140   parameter_identifier_list -> identifier_list , ELIPSIS
Rule 141   identifier_list -> identifier
Rule 142   identifier_list -> identifier_list , identifier
Rule 143   parameter_type_list -> parameter_list
Rule 144   parameter_type_list -> parameter_list , ELIPSIS
Rule 145   parameter_list -> parameter_declaration
Rule 146   parameter_list -> parameter_list , parameter_declaration
Rule 147   parameter_declaration -> type_specifier_list declarator
Rule 148   parameter_declaration -> type_name
Rule 149   type_name -> type_specifier_list
Rule 150   type_name -> type_specifier_list abstract_declarator
Rule 151   abstract_declarator -> pointer
Rule 152   abstract_declarator -> abstract_declarator2
Rule 153   abstract_declarator -> pointer abstract_declarator2
Rule 154   abstract_declarator2 -> ( abstract_declarator )
Rule 155   abstract_declarator2 -> [ ]
Rule 156   abstract_declarator2 -> [ constant_expr ]
Rule 157   abstract_declarator2 -> abstract_declarator2 [ ]
Rule 158   abstract_declarator2 -> abstract_declarator2 [ constant_expr ]
Rule 159   abstract_declarator2 -> ( )
Rule 160   abstract_declarator2 -> ( parameter_type_list )
Rule 161   abstract_declarator2 -> abstract_declarator2 ( )
Rule 162   abstract_declarator2 -> abstract_declarator2 ( parameter_type_list )
Rule 163   initializer -> assignment_expr
Rule 164   initializer -> { initializer_list }
Rule 165   initializer -> { initializer_list , }
Rule 166   initializer_list -> initializer
Rule 167   initializer_list -> initializer_list , initializer
Rule 168   statement -> labeled_statement
Rule 169   statement -> compound_statement
Rule 170   statement -> expression_statement
Rule 171   statement -> selection_statement
Rule 172   statement -> iteration_statement
Rule 173   statement -> jump_statement
Rule 174   labeled_statement -> identifier : statement
Rule 175   labeled_statement -> CASE constant_expr : statement
Rule 176   labeled_statement -> DEFAULT : statement
Rule 177   left_bracket -> {
Rule 178   right_bracket -> }
Rule 179   compound_statement -> left_bracket right_bracket
Rule 180   compound_statement -> left_bracket statement_list right_bracket
Rule 181   compound_statement -> left_bracket declaration_list right_bracket
Rule 182   compound_statement -> left_bracket declaration_list statement_list right_bracket
Rule 183   declaration_list -> declaration
Rule 184   declaration_list -> declaration_list declaration
Rule 185   statement_list -> statement
Rule 186   statement_list -> statement_list statement
Rule 187   expression_statement -> ;
Rule 188   expression_statement -> expr ;
Rule 189   selection_statement -> IF ( expr ) statement
Rule 190   selection_statement -> IF ( expr ) statement ELSE statement
Rule 191   selection_statement -> SWITCH ( expr ) statement
Rule 192   iteration_statement -> WHILE ( expr ) statement
Rule 193   iteration_statement -> DO statement WHILE ( expr ) ;
Rule 194   iteration_statement -> FOR ( ; ; ) statement
Rule 195   iteration_statement -> FOR ( ; ; expr ) statement
Rule 196   iteration_statement -> FOR ( ; expr ; ) statement
Rule 197   iteration_statement -> FOR ( ; expr ; expr ) statement
Rule 198   iteration_statement -> FOR ( expr ; ; ) statement
Rule 199   iteration_statement -> FOR ( expr ; ; expr ) statement
Rule 200   iteration_statement -> FOR ( expr ; expr ; ) statement
Rule 201   iteration_statement -> FOR ( expr ; expr ; expr ) statement
Rule 202   jump_statement -> GOTO identifier ;
Rule 203   jump_statement -> CONTINUE ;
Rule 204   jump_statement -> BREAK ;
Rule 205   jump_statement -> RETURN ;
Rule 206   jump_statement -> RETURN expr ;
Rule 207   code -> file
Rule 208   file -> external_definition
Rule 209   file -> file external_definition
Rule 210   external_definition -> function_definition
Rule 211   external_definition -> declaration
Rule 212   function_definition -> declarator function_body
Rule 213   function_definition -> declaration_specifiers declarator function_body
Rule 214   function_body -> compound_statement
Rule 215   function_body -> declaration_list compound_statement
Rule 216   identifier -> IDENTIFIER

Terminals, with rules where they appear

!                    : 26
%                    : 32
&                    : 21 48
(                    : 4 7 8 20 28 127 130 131 132 154 159 160 161 162 189 190 191 192 193 194 195 196 197 198 199 200 201
)                    : 4 7 8 20 28 127 130 131 132 154 159 160 161 162 189 190 191 192 193 194 195 196 197 198 199 200 201
*                    : 22 30 133 134 135 136
+                    : 23 34
,                    : 14 73 82 113 121 140 142 144 146 165 167
-                    : 24 35
.                    : 9
/                    : 31
:                    : 58 115 116 174 175 176
;                    : 75 76 111 187 188 193 194 194 195 195 196 196 197 197 198 198 199 199 200 200 201 201 202 203 204 205 206
<                    : 40
=                    : 61 84 123
>                    : 41
?                    : 58
ADD_ASSIGN           : 65
AND_ASSIGN           : 69
AND_OP               : 54
AUTO                 : 88
BREAK                : 204
CASE                 : 175
CHAR                 : 90
CONST                : 98
CONSTANT             : 2
CONTINUE             : 203
DEC_OP               : 12 17
DEFAULT              : 176
DIV_ASSIGN           : 63
DO                   : 193
DOUBLE               : 97
ELIPSIS              : 140 144
ELSE                 : 190
ENUM                 : 117 118 119
EQ_OP                : 45
ERRORCODE            : 
ERRORCODE2           : 
EXTERN               : 86
FLOAT                : 96
FOR                  : 194 195 196 197 198 199 200 201
GE_OP                : 43
GOTO                 : 202
IDENTIFIER           : 216
IF                   : 189 190
INC_OP               : 11 16
INT                  : 92
LEFT_ASSIGN          : 67
LEFT_OP              : 37
LE_OP                : 42
LONG                 : 93
MOD_ASSIGN           : 64
MUL_ASSIGN           : 62
NE_OP                : 46
OR_ASSIGN            : 71
OR_OP                : 56
PTR_OP               : 10
RANGE                : 
REGISTER             : 89
RETURN               : 205 206
RIGHT_ASSIGN         : 68
RIGHT_OP             : 38
SHORT                : 91
SIGNED               : 94
SIZEOF               : 19 20
STATIC               : 87
STRING_LITERAL       : 3
STRUCT               : 107
SUB_ASSIGN           : 66
SWITCH               : 191
TYPEDEF              : 85
TYPEDEF_CHAR         : 
TYPEDEF_INT          : 
TYPE_NAME            : 103
UNION                : 108
UNSIGNED             : 95
UNSIGNED_CHAR        : 
UNSIGNED_INT         : 
VOID                 : 100
VOLATILE             : 99
WHILE                : 192 193
XOR_ASSIGN           : 70
[                    : 6 128 129 155 156 157 158
]                    : 6 128 129 155 156 157 158
^                    : 50
error                : 
{                    : 104 105 117 118 164 165 177
|                    : 52
}                    : 104 105 117 118 164 165 178
~                    : 25

Nonterminals, with rules where they appear

abstract_declarator  : 150 154
abstract_declarator2 : 152 153 157 158 161 162
additive_expr        : 34 35 36 37 38
and_expr             : 48 49 50
argument_expr_list   : 8 14
assignment_expr      : 13 14 60 72 73 163
assignment_operator  : 60
cast_expr            : 18 28 29 30 31 32
code                 : 0
compound_statement   : 169 214 215
conditional_expr     : 58 59 74
constant_expr        : 115 116 123 129 156 158 175
declaration          : 183 184 211
declaration_list     : 181 182 184 215
declaration_specifiers : 75 76 78 80 213
declarator           : 83 84 114 116 127 147 212 213
declarator2          : 124 125 128 129 130 131 132
enum_specifier       : 102
enumerator           : 120 121
enumerator_list      : 117 118 121
equality_expr        : 45 46 47 48
exclusive_or_expr    : 50 51 52
expr                 : 4 6 73 188 189 190 191 192 193 195 196 197 197 198 199 199 200 200 201 201 201 206
expression_statement : 170
external_definition  : 208 209
file                 : 207 209
function_body        : 212 213
function_definition  : 210
identifier           : 1 9 10 104 106 118 119 122 123 126 141 142 174 202
identifier_list      : 139 140 142
inclusive_or_expr    : 52 53 54
init_declarator      : 81 82
init_declarator_list : 76 82
initializer          : 84 166 167
initializer_list     : 164 165 167
iteration_statement  : 172
jump_statement       : 173
labeled_statement    : 168
left_bracket         : 179 180 181 182
logical_and_expr     : 54 55 56
logical_or_expr      : 56 57 58 58
multiplicative_expr  : 30 31 32 33 34 35
parameter_declaration : 145 146
parameter_identifier_list : 132
parameter_list       : 143 144 146
parameter_type_list  : 131 160 162
pointer              : 125 135 136 151 153
postfix_expr         : 6 7 8 9 10 11 12 15
primary_expr         : 5
relational_expr      : 40 41 42 43 44 45 46
right_bracket        : 179 180 181 182
selection_statement  : 171
shift_expr           : 37 38 39 40 41 42 43
statement            : 174 175 176 185 186 189 190 190 191 192 193 194 195 196 197 198 199 200 201
statement_list       : 180 182 186
storage_class_specifier : 77 78
struct_declaration   : 109 110
struct_declaration_list : 104 105 110
struct_declarator    : 112 113
struct_declarator_list : 111 113
struct_or_union      : 104 105 106
struct_or_union_specifier : 101
type_name            : 20 28 148
type_specifier       : 79 80 137 138
type_specifier_list  : 111 134 136 138 147 149 150
unary_expr           : 16 17 19 27 60
unary_operator       : 18


Parsing method: LALR


state 0

    (0) S' -> . code
    (207) code -> . file
    (208) file -> . external_definition
    (209) file -> . file external_definition
    (210) external_definition -> . function_definition
    (211) external_definition -> . declaration
    (212) function_definition -> . declarator function_body
    (213) function_definition -> . declaration_specifiers declarator function_body
    (75) declaration -> . declaration_specifiers ;
    (76) declaration -> . declaration_specifiers init_declarator_list ;
    (124) declarator -> . declarator2
    (125) declarator -> . pointer declarator2
    (77) declaration_specifiers -> . storage_class_specifier
    (78) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (79) declaration_specifiers -> . type_specifier
    (80) declaration_specifiers -> . type_specifier declaration_specifiers
    (126) declarator2 -> . identifier
    (127) declarator2 -> . ( declarator )
    (128) declarator2 -> . declarator2 [ ]
    (129) declarator2 -> . declarator2 [ constant_expr ]
    (130) declarator2 -> . declarator2 ( )
    (131) declarator2 -> . declarator2 ( parameter_type_list )
    (132) declarator2 -> . declarator2 ( parameter_identifier_list )
    (133) pointer -> . *
    (134) pointer -> . * type_specifier_list
    (135) pointer -> . * pointer
    (136) pointer -> . * type_specifier_list pointer
    (85) storage_class_specifier -> . TYPEDEF
    (86) storage_class_specifier -> . EXTERN
    (87) storage_class_specifier -> . STATIC
    (88) storage_class_specifier -> . AUTO
    (89) storage_class_specifier -> . REGISTER
    (90) type_specifier -> . CHAR
    (91) type_specifier -> . SHORT
    (92) type_specifier -> . INT
    (93) type_specifier -> . LONG
    (94) type_specifier -> . SIGNED
    (95) type_specifier -> . UNSIGNED
    (96) type_specifier -> . FLOAT
    (97) type_specifier -> . DOUBLE
    (98) type_specifier -> . CONST
    (99) type_specifier -> . VOLATILE
    (100) type_specifier -> . VOID
    (101) type_specifier -> . struct_or_union_specifier
    (102) type_specifier -> . enum_specifier
    (103) type_specifier -> . TYPE_NAME
    (216) identifier -> . IDENTIFIER
    (104) struct_or_union_specifier -> . struct_or_union identifier { struct_declaration_list }
    (105) struct_or_union_specifier -> . struct_or_union { struct_declaration_list }
    (106) struct_or_union_specifier -> . struct_or_union identifier
    (117) enum_specifier -> . ENUM { enumerator_list }
    (118) enum_specifier -> . ENUM identifier { enumerator_list }
    (119) enum_specifier -> . ENUM identifier
    (107) struct_or_union -> . STRUCT
    (108) struct_or_union -> . UNION

    (               shift and go to state 17
    *               shift and go to state 18
    TYPEDEF         shift and go to state 23
    EXTERN          shift and go to state 13
    STATIC          shift and go to state 11
    AUTO            shift and go to state 24
    REGISTER        shift and go to state 37
    CHAR            shift and go to state 9
    SHORT           shift and go to state 10
    INT             shift and go to state 30
    LONG            shift and go to state 20
    SIGNED          shift and go to state 33
    UNSIGNED        shift and go to state 19
    FLOAT           shift and go to state 32
    DOUBLE          shift and go to state 31
    CONST           shift and go to state 4
    VOLATILE        shift and go to state 35
    VOID            shift and go to state 6
    TYPE_NAME       shift and go to state 14
    IDENTIFIER      shift and go to state 22
    ENUM            shift and go to state 25
    STRUCT          shift and go to state 29
    UNION           shift and go to state 21


    external_definition            shift and go to state 1
    storage_class_specifier        shift and go to state 2
    code                           shift and go to state 3
    struct_or_union_specifier      shift and go to state 5
    declarator2                    shift and go to state 8
    file                           shift and go to state 12
    pointer                        shift and go to state 15
    type_specifier                 shift and go to state 16
    struct_or_union                shift and go to state 7
    declaration_specifiers         shift and go to state 26
    declaration                    shift and go to state 27
    function_definition            shift and go to state 28
    enum_specifier                 shift and go to state 34
    declarator                     shift and go to state 36
    identifier                     shift and go to state 38

state 1

    (208) file -> external_definition .

    (               reduce using rule 208 (file -> external_definition .)
    *               reduce using rule 208 (file -> external_definition .)
    TYPEDEF         reduce using rule 208 (file -> external_definition .)
    EXTERN          reduce using rule 208 (file -> external_definition .)
    STATIC          reduce using rule 208 (file -> external_definition .)
    AUTO            reduce using rule 208 (file -> external_definition .)
    REGISTER        reduce using rule 208 (file -> external_definition .)
    CHAR            reduce using rule 208 (file -> external_definition .)
    SHORT           reduce using rule 208 (file -> external_definition .)
    INT             reduce using rule 208 (file -> external_definition .)
    LONG            reduce using rule 208 (file -> external_definition .)
    SIGNED          reduce using rule 208 (file -> external_definition .)
    UNSIGNED        reduce using rule 208 (file -> external_definition .)
    FLOAT           reduce using rule 208 (file -> external_definition .)
    DOUBLE          reduce using rule 208 (file -> external_definition .)
    CONST           reduce using rule 208 (file -> external_definition .)
    VOLATILE        reduce using rule 208 (file -> external_definition .)
    VOID            reduce using rule 208 (file -> external_definition .)
    TYPE_NAME       reduce using rule 208 (file -> external_definition .)
    IDENTIFIER      reduce using rule 208 (file -> external_definition .)
    ENUM            reduce using rule 208 (file -> external_definition .)
    STRUCT          reduce using rule 208 (file -> external_definition .)
    UNION           reduce using rule 208 (file -> external_definition .)
    $end            reduce using rule 208 (file -> external_definition .)



state 2

    (77) declaration_specifiers -> storage_class_specifier .
    (78) declaration_specifiers -> storage_class_specifier . declaration_specifiers
    (77) declaration_specifiers -> . storage_class_specifier
    (78) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (79) declaration_specifiers -> . type_specifier
    (80) declaration_specifiers -> . type_specifier declaration_specifiers
    (85) storage_class_specifier -> . TYPEDEF
    (86) storage_class_specifier -> . EXTERN
    (87) storage_class_specifier -> . STATIC
    (88) storage_class_specifier -> . AUTO
    (89) storage_class_specifier -> . REGISTER
    (90) type_specifier -> . CHAR
    (91) type_specifier -> . SHORT
    (92) type_specifier -> . INT
    (93) type_specifier -> . LONG
    (94) type_specifier -> . SIGNED
    (95) type_specifier -> . UNSIGNED
    (96) type_specifier -> . FLOAT
    (97) type_specifier -> . DOUBLE
    (98) type_specifier -> . CONST
    (99) type_specifier -> . VOLATILE
    (100) type_specifier -> . VOID
    (101) type_specifier -> . struct_or_union_specifier
    (102) type_specifier -> . enum_specifier
    (103) type_specifier -> . TYPE_NAME
    (104) struct_or_union_specifier -> . struct_or_union identifier { struct_declaration_list }
    (105) struct_or_union_specifier -> . struct_or_union { struct_declaration_list }
    (106) struct_or_union_specifier -> . struct_or_union identifier
    (117) enum_specifier -> . ENUM { enumerator_list }
    (118) enum_specifier -> . ENUM identifier { enumerator_list }
    (119) enum_specifier -> . ENUM identifier
    (107) struct_or_union -> . STRUCT
    (108) struct_or_union -> . UNION

    ;               reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    (               reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    *               reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    IDENTIFIER      reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    TYPEDEF         shift and go to state 23
    EXTERN          shift and go to state 13
    STATIC          shift and go to state 11
    AUTO            shift and go to state 24
    REGISTER        shift and go to state 37
    CHAR            shift and go to state 9
    SHORT           shift and go to state 10
    INT             shift and go to state 30
    LONG            shift and go to state 20
    SIGNED          shift and go to state 33
    UNSIGNED        shift and go to state 19
    FLOAT           shift and go to state 32
    DOUBLE          shift and go to state 31
    CONST           shift and go to state 4
    VOLATILE        shift and go to state 35
    VOID            shift and go to state 6
    TYPE_NAME       shift and go to state 14
    ENUM            shift and go to state 25
    STRUCT          shift and go to state 29
    UNION           shift and go to state 21


    storage_class_specifier        shift and go to state 2
    struct_or_union                shift and go to state 7
    type_specifier                 shift and go to state 16
    enum_specifier                 shift and go to state 34
    struct_or_union_specifier      shift and go to state 5
    declaration_specifiers         shift and go to state 39

state 3

    (0) S' -> code .




state 4

    (98) type_specifier -> CONST .

    CHAR            reduce using rule 98 (type_specifier -> CONST .)
    SHORT           reduce using rule 98 (type_specifier -> CONST .)
    INT             reduce using rule 98 (type_specifier -> CONST .)
    LONG            reduce using rule 98 (type_specifier -> CONST .)
    SIGNED          reduce using rule 98 (type_specifier -> CONST .)
    UNSIGNED        reduce using rule 98 (type_specifier -> CONST .)
    FLOAT           reduce using rule 98 (type_specifier -> CONST .)
    DOUBLE          reduce using rule 98 (type_specifier -> CONST .)
    CONST           reduce using rule 98 (type_specifier -> CONST .)
    VOLATILE        reduce using rule 98 (type_specifier -> CONST .)
    VOID            reduce using rule 98 (type_specifier -> CONST .)
    TYPE_NAME       reduce using rule 98 (type_specifier -> CONST .)
    :               reduce using rule 98 (type_specifier -> CONST .)
    ENUM            reduce using rule 98 (type_specifier -> CONST .)
    STRUCT          reduce using rule 98 (type_specifier -> CONST .)
    UNION           reduce using rule 98 (type_specifier -> CONST .)
    (               reduce using rule 98 (type_specifier -> CONST .)
    *               reduce using rule 98 (type_specifier -> CONST .)
    IDENTIFIER      reduce using rule 98 (type_specifier -> CONST .)
    [               reduce using rule 98 (type_specifier -> CONST .)
    )               reduce using rule 98 (type_specifier -> CONST .)
    TYPEDEF         reduce using rule 98 (type_specifier -> CONST .)
    EXTERN          reduce using rule 98 (type_specifier -> CONST .)
    STATIC          reduce using rule 98 (type_specifier -> CONST .)
    AUTO            reduce using rule 98 (type_specifier -> CONST .)
    REGISTER        reduce using rule 98 (type_specifier -> CONST .)
    ;               reduce using rule 98 (type_specifier -> CONST .)
    ,               reduce using rule 98 (type_specifier -> CONST .)



state 5

    (101) type_specifier -> struct_or_union_specifier .

    CHAR            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    SHORT           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    INT             reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    LONG            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    SIGNED          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    UNSIGNED        reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    FLOAT           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    DOUBLE          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    CONST           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    VOLATILE        reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    VOID            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    TYPE_NAME       reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    :               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    ENUM            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    STRUCT          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    UNION           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    (               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    *               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    IDENTIFIER      reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    [               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    )               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    TYPEDEF         reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    EXTERN          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    STATIC          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    AUTO            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    REGISTER        reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    ;               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    ,               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)



state 6

    (100) type_specifier -> VOID .

    CHAR            reduce using rule 100 (type_specifier -> VOID .)
    SHORT           reduce using rule 100 (type_specifier -> VOID .)
    INT             reduce using rule 100 (type_specifier -> VOID .)
    LONG            reduce using rule 100 (type_specifier -> VOID .)
    SIGNED          reduce using rule 100 (type_specifier -> VOID .)
    UNSIGNED        reduce using rule 100 (type_specifier -> VOID .)
    FLOAT           reduce using rule 100 (type_specifier -> VOID .)
    DOUBLE          reduce using rule 100 (type_specifier -> VOID .)
    CONST           reduce using rule 100 (type_specifier -> VOID .)
    VOLATILE        reduce using rule 100 (type_specifier -> VOID .)
    VOID            reduce using rule 100 (type_specifier -> VOID .)
    TYPE_NAME       reduce using rule 100 (type_specifier -> VOID .)
    :               reduce using rule 100 (type_specifier -> VOID .)
    ENUM            reduce using rule 100 (type_specifier -> VOID .)
    STRUCT          reduce using rule 100 (type_specifier -> VOID .)
    UNION           reduce using rule 100 (type_specifier -> VOID .)
    (               reduce using rule 100 (type_specifier -> VOID .)
    *               reduce using rule 100 (type_specifier -> VOID .)
    IDENTIFIER      reduce using rule 100 (type_specifier -> VOID .)
    [               reduce using rule 100 (type_specifier -> VOID .)
    )               reduce using rule 100 (type_specifier -> VOID .)
    TYPEDEF         reduce using rule 100 (type_specifier -> VOID .)
    EXTERN          reduce using rule 100 (type_specifier -> VOID .)
    STATIC          reduce using rule 100 (type_specifier -> VOID .)
    AUTO            reduce using rule 100 (type_specifier -> VOID .)
    REGISTER        reduce using rule 100 (type_specifier -> VOID .)
    ;               reduce using rule 100 (type_specifier -> VOID .)
    ,               reduce using rule 100 (type_specifier -> VOID .)



state 7

    (104) struct_or_union_specifier -> struct_or_union . identifier { struct_declaration_list }
    (105) struct_or_union_specifier -> struct_or_union . { struct_declaration_list }
    (106) struct_or_union_specifier -> struct_or_union . identifier
    (216) identifier -> . IDENTIFIER

    {               shift and go to state 41
    IDENTIFIER      shift and go to state 22


    identifier                     shift and go to state 40

state 8

    (124) declarator -> declarator2 .
    (128) declarator2 -> declarator2 . [ ]
    (129) declarator2 -> declarator2 . [ constant_expr ]
    (130) declarator2 -> declarator2 . ( )
    (131) declarator2 -> declarator2 . ( parameter_type_list )
    (132) declarator2 -> declarator2 . ( parameter_identifier_list )
